objects/Activity.object
<CustomObject>
    <fields>
        <fullName>WT_What_ownership_str_investment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner structure of investment (private)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_What_percent_portfolio_foreign_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>% of portfolio that is foreign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Who_Initiated_Contact__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Who Initiated Contact?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Initiated</fullName>
                </value>
                <value>
                    <fullName>Client Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Wholesale_Accept_Party_Chks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Wholesalers Accepting 3rd Party Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_annual_admin_call__c</fullName>
        <description>Created as a part of DBSFCRM-464.</description>
        <label>Is this an annual administrator call?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_annual_review_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Is this an annual review addendum call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_chg_send_clt_funds__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explain fund sending changes (wires)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_chg_senior_manag_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Senior management changes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_exchgs_counterparties__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>List all exchanges or counterparties</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_which_country_planinvest_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Which country(ies) plan to invest?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_which_industries_plan_invest_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>which industries do you plan to invest?</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>